#14 Add structure to main content section

--- a/src/HTML/homepage.html
+++ b/src/HTML/homepage.html
@@ -22,7 +22,15 @@
     </header>
 
     <main>
-        
+        <div class="beerBack">
+            <img src="/assets/beerBackground.jpg">
+
+            <div class="button-container">
+                <a href="#" class="button green">Squad</a>
+                <a href="#" class="button red">Log activity</a>
+                <a href="#" class="button blue">Leaderboard</a>
+            </div>
+        </div>
     
     </main>
 </body>
