#14 fix soruce for the images

--- a/src/HTML/homepage.html
+++ b/src/HTML/homepage.html
@@ -3,18 +3,18 @@
 
 <head>
     <title>BeerStep</title>
-    <link rel="stylesheet" href="/CSS/HomePage.css">
+    <link rel="stylesheet" href="/src/CSS/homePage.css">
 </head>
 
 <body>
     <header>
         <div class = "settings"> 
-            <img src="/assets/settings.png">
+            <img src="/src/assets/settings.png">
         </div>
         <h1>BeerStep</h1>
         <div class="user">
             <div class="profile-pic">
-                <img src="/assets/userPic.png">
+                <img src="/src/assets/userPic.png">
             </div>
             <p class="username">Jabo</p>
 
@@ -23,7 +23,7 @@
 
     <main>
         <div class="beerBack">
-            <img src="/assets/beerBackground.jpg">
+            <img src="/src/assets/beerBackground.jpg">
 
             <div class="button-container">
                 <a href="#" class="button green">Squad</a>
