--- a/src/HTML/logIn.html
+++ b/src/HTML/logIn.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-    
+    <link rel="stylesheet" href="/src/CSS/logIn.css">
+    <title>Login Page</title>
 </head>
 
 <body> 
 
     <header>
-        
+        <h1>BeerStep</h1>
     </header>
 
     <main>
