#16 Add styles for header, body, and container layout

--- a/src/HTML/register.html
+++ b/src/HTML/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/CSS/register.css">
+    <link rel="stylesheet" href="src/CSS/register.css">
     <title>Register Page</title>
 </head>
 
